# crewai-food-assistant

./: Evaluation.csv  README.md  crew_cli.py  env.txt  pyproject.toml  vimrc.txt
conversations/m01/: conversation.txt  user_preferences.txt
conversations/m02/: conversation.txt  user_preferences.txt
conversations/m03/: conversation.txt  user_preferences.txt
conversations/m04/: conversation.txt  user_preferences.txt
conversations/m05/: conversation.txt  user_preferences.txt
conversations/m06/: conversation.txt  user_preferences.txt
conversations/m07/: conversation.txt  user_preferences.txt
conversations/m08/: conversation.txt  user_preferences.txt
conversations/m09/: conversation.txt  user_preferences.txt
conversations/m10/: conversation.txt  user_preferences.txt
conversations/m11/: conversation.txt  user_preferences.txt
conversations/m12/: conversation.txt  user_preferences.txt
conversations/m13/: conversation.txt  user_preferences.txt
conversations/m15/: conversation.txt  user_preferences.txt
conversations/s01/: conversation.txt
conversations/s02/: conversation.txt  user_preferences.txt
conversations/s03/: conversation.txt  user_preferences.txt
conversations/s04/: conversation.txt  user_preferences.txt
conversations/s05/: conversation.txt  user_preferences.txt
conversations/s06/: conversation.txt  user_preferences.txt
conversations/s07/: conversation.txt  user_preferences.txt
gradio_templates/: chatbot.py  chatbotPreferencesInteraction-stable.py  chatbotSessionPreferencesStorage.py  finalChatbot.py  landingAndChatbot.py
(+31 files in other folders)
