[tool. poetry]
name = "recipes_crew"
version = "0.1.0"
description = "crews"
authors = ["Salvatore Amoruso"]

[tool-poetry-dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}


[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry-api"